manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-web-server
spec:
  selector:
    app: server
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
